// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should render a select input with options 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy fNzmXy"
  >
    <select
      class="w-full px-4 py-3 pr-12 overflow-hidden border rounded appearance-none sc-AxjAm bcybyt shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary"
      data-testid="Select"
    >
      <option
        data-testid="select-option"
        selected=""
        value="1"
      >
        Option 1
      </option>
      <option
        data-testid="select-option"
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="w-12 text-lg pointer-events-none sc-AxirZ sc-AxhCb egOFvk text-theme-neutral-dark"
    >
      <div
        class="sc-AxgMl jouCcI"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select should render a select input with placeholder 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy fNzmXy"
  >
    <select
      class="w-full px-4 py-3 pr-12 overflow-hidden border rounded appearance-none sc-AxjAm bcybyt shadow-sm bg-theme-background border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary"
      data-testid="Select"
    >
      <option
        disabled=""
        selected=""
        value=""
      >
        Select option
      </option>
    </select>
    <div
      class="w-12 text-lg pointer-events-none sc-AxirZ sc-AxhCb egOFvk text-theme-neutral-dark"
    >
      <div
        class="sc-AxgMl jouCcI"
        height="1em"
        width="1em"
      >
        <svg>
          chevron-down.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
